Fix overflow issue in highlight list
This mitigates a weird issue that I have difficulty reproducing where
sometimes the width of the <li> element becomes greater than the popup
container.
Setting 'width' is not an option here since the actual width varies
depending on whether there is a scrollbar in the highlight list

--- a/popup.css
+++ b/popup.css
@@ -170,6 +170,7 @@ button:last-of-type {
 
 #highlights-list > li {
     padding: 2px;
+    max-width: 146px;
     border-bottom: solid 1px rgb(230, 230, 230);
     cursor: pointer;
     color: #6a6a6a;
